# ffts

./: Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
ffts/: asgi.py  settings.py  urls.py  wsgi.py
static/website/css/: account.css  accounts.css  general.css  importation.css  login.css  transactions.css  transfers.css
static/website/js/: importation.js
website/: admin.py  models.py  urls.py
website/templates/: account.html  accounts.html  documentation.html  header.html  importation.html  login.html  transactions.html  transfers.html
website/views/: account.py  accounts.py  documentation.py  importation.py  login.py  logout.py  transactions.py  transfers.py
website/views/functions/: authentication.py  data_functions.py  dbinterface.py
website/views/functions/importation/: binance.py  csv.py  degiro.py  estateguru.py  gateio.py  interactivebrokers.py  mintos.py
