[tool.poetry]
name = "ffts-django"
version = "1"
description = "This web app helps you track easily your accounts. Add transactions, transfers and import data from any website using (or creating) an importation model. Internet connection is not used, and you can always export your data in CSV files. You can also have multiple users."
authors = ["Lukas-Ldc <78859408+Lukas-Ldc@users.noreply.github.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = "5.0.*"
datetime = "5.*"
pathlib = "1.*"
python-dateutil = "2.8.*"
beautifulsoup4 = "4.12.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
